--- a/style/output/index.css
+++ b/style/output/index.css
@@ -88,7 +88,7 @@ header h1 {
 }
 header #social {
   display: grid;
-  grid-template-columns: repeat(6, min-content);
+  grid-template-columns: repeat(7, min-content);
 }
 header #social a {
   display: flex;
@@ -121,6 +121,9 @@ header #social a.fa-spotify {
 }
 header #social a.fa-soundcloud {
   color: orange;
+}
+header #social a.fa-whatsapp {
+  color: #2bb740;
 }
 
 #menu {
@@ -257,7 +260,7 @@ header #social a.fa-soundcloud {
 }
 @media only screen and (max-width: 62.5em) {
   #display .metadata {
-    grid-template-columns: [heading-start] 30% [heading-end body-start] max-content [body-end];
+    grid-template-columns: [heading-start] 30% [heading-end body-start] 1fr [body-end];
   }
 }
 #display .metadata p {
@@ -324,6 +327,11 @@ header #social a.fa-soundcloud {
 #display .social a.fa-napster {
   background-color: #0054a8;
 }
+#display .social a.fa-hypeddit {
+  background-color: #0054a8;
+  background-image: url(../../assets/icons/hypeddit.jpeg);
+  background-size: 100% 100%;
+}
 #display .social a:hover {
   cursor: pointer;
   transform: translateY(-5px);
@@ -376,7 +384,7 @@ footer p {
 footer #social {
   grid-column: 2/3;
   display: grid;
-  grid-template-columns: repeat(6, min-content);
+  grid-template-columns: repeat(7, min-content);
 }
 @media only screen and (max-width: 62.5em) {
   footer #social {
@@ -405,16 +413,6 @@ footer #social a {
     padding: 5px;
   }
 }
-footer #social a:nth-child(1) {
-  font-family: "Manrope", sans-serif;
-  font-size: 1.7rem;
-}
-@media only screen and (max-width: 62.5em) {
-  footer #social a:nth-child(1) {
-    width: 100%;
-    text-align: center;
-  }
-}
 footer #social a:before {
   padding: 5px 7px;
 }
@@ -435,4 +433,7 @@ footer #social a.fa-spotify {
 }
 footer #social a.fa-soundcloud {
   color: orange;
+}
+footer #social a.fa-whatsapp {
+  color: #2bb740;
 }
