--- a/style/body/display.scss
+++ b/style/body/display.scss
@@ -37,6 +37,12 @@
         color: $color-highlight;
     }
 
+    section#intro p {
+        font-size: 2.2rem;
+        margin-bottom: 3rem;
+        font-family: $manrope;
+    }
+
     .metadata {
         margin-top: 2rem;
         margin-bottom: 2rem;
