--- a/style/body/header.scss
+++ b/style/body/header.scss
@@ -52,6 +52,31 @@ header {
         }
     }
 
+    #header-links {
+        display: grid;
+        grid-template-rows: 70% 30%;
+        align-items: center;
+        grid-row-gap: 0.5rem;
+    }
+
+    #header-text-links {
+        justify-self: center;
+
+        a {
+            text-decoration: none;
+            font-family: $manrope;
+        }
+
+        a:visited,
+        a:active {
+            color: inherit
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+    }
+
     #social {
         display: grid;
         grid-template-columns: repeat(7, min-content);
@@ -66,6 +91,10 @@ header {
             height: 100%;
             color: black;
             transition: background-color 0.1s;
+
+            @media only screen and (max-width: $bp-mid) {
+                padding: 0;
+            }
         }
 
         a:before {
