--- a/style/output/index.css
+++ b/style/output/index.css
@@ -86,6 +86,26 @@ header h1 {
     font-size: 2.5rem;
   }
 }
+header #header-links {
+  display: grid;
+  grid-template-rows: 70% 30%;
+  align-items: center;
+  grid-row-gap: 0.5rem;
+}
+header #header-text-links {
+  justify-self: center;
+}
+header #header-text-links a {
+  text-decoration: none;
+  font-family: "Manrope", sans-serif;
+}
+header #header-text-links a:visited,
+header #header-text-links a:active {
+  color: inherit;
+}
+header #header-text-links a:hover {
+  text-decoration: underline;
+}
 header #social {
   display: grid;
   grid-template-columns: repeat(7, min-content);
@@ -100,6 +120,11 @@ header #social a {
   height: 100%;
   color: black;
   transition: background-color 0.1s;
+}
+@media only screen and (max-width: 45em) {
+  header #social a {
+    padding: 0;
+  }
 }
 header #social a:before {
   padding: 5px 7px;
@@ -249,11 +274,6 @@ header #social a.fa-whatsapp {
   font-weight: bold;
   color: #a93838;
 }
-#display section#intro p {
-  font-size: 2.2rem;
-  margin-bottom: 3rem;
-  font-family: "Manrope", sans-serif;
-}
 #display .metadata {
   margin-top: 2rem;
   margin-bottom: 2rem;
@@ -342,10 +362,6 @@ header #social a.fa-whatsapp {
   transform: translateY(-5px);
 }
 
-#intro-container {
-  display: none;
-}
-
 footer {
   min-height: 30vh;
   grid-column: sidebar-start/display-end;
@@ -390,8 +406,30 @@ footer p {
     grid-column: 1/3;
   }
 }
-footer #social {
+footer #footer-links {
   grid-column: 2/3;
+  display: grid;
+  grid-template-rows: max-content min-content;
+  justify-items: center;
+}
+footer #footer-text-links {
+  justify-self: center;
+  font-size: 1.7rem;
+  font-family: "Manrope", sans-serif;
+  font-size: 1.7rem;
+  color: white;
+}
+footer #footer-text-links a {
+  text-decoration: none;
+}
+footer #footer-text-links a:visited,
+footer #footer-text-links a:active {
+  color: white;
+}
+footer #footer-text-links a:hover {
+  text-decoration: underline;
+}
+footer #social {
   display: grid;
   grid-template-columns: repeat(7, min-content);
 }
@@ -400,7 +438,6 @@ footer #social {
     display: flex;
     flex-direction: row;
     margin-bottom: 3rem;
-    flex-wrap: wrap;
     justify-content: center;
   }
 }
@@ -419,7 +456,7 @@ footer #social a {
 @media only screen and (max-width: 62.5em) {
   footer #social a {
     height: auto;
-    padding: 5px;
+    padding: 0px;
   }
 }
 footer #social a:before {
@@ -445,4 +482,29 @@ footer #social a.fa-soundcloud {
 }
 footer #social a.fa-whatsapp {
   color: #2bb740;
+}
+
+#intro-container,
+#credits-container {
+  display: none;
+}
+
+#intro ul,
+#credits ul {
+  list-style-position: inside;
+}
+#intro p,
+#intro li,
+#credits p,
+#credits li {
+  font-size: 2.2rem;
+  font-family: "Manrope", sans-serif;
+}
+#intro p,
+#credits p {
+  margin-bottom: 3rem;
+}
+#intro li,
+#credits li {
+  margin-bottom: 1rem;
 }
