--- a/style/body/header.scss
+++ b/style/body/header.scss
@@ -62,14 +62,12 @@ header {
     #header-text-links {
         justify-self: center;
 
-        a {
-            text-decoration: none;
-            font-family: $manrope;
-        }
-
+        a,
         a:visited,
         a:active {
-            color: inherit
+            text-decoration: none;
+            font-family: $manrope;
+            color: black
         }
 
         a:hover {
