--- a/style/body/footer.scss
+++ b/style/body/footer.scss
@@ -62,6 +62,7 @@ footer {
             text-decoration: none;
         }
 
+        a,
         a:visited,
         a:active {
             color: white
