--- a/style/output/index.css
+++ b/style/output/index.css
@@ -86,6 +86,9 @@ header h1 {
     font-size: 2.5rem;
   }
 }
+header #name {
+  text-align: center;
+}
 header #header-links {
   display: grid;
   grid-template-rows: 70% 30%;
