Add new header image

--- a/style/body/header.scss
+++ b/style/body/header.scss
@@ -3,12 +3,10 @@
 
 #header-image {
     grid-column: sidebar-start / display-end;
-    background: linear-gradient(to bottom right, rgba(242, 255, 0, 0.077), rgba(255, 0, 0, 0.071)), url(../../assets/images/saugatowersBW.png);
-    background-size: 100% auto;
-    background-position: 0 0;
+    background: url(../../assets/images/saugatowersNew.jpg);
+    //linear-gradient(to bottom right, rgba(242, 255, 0, 0.077), rgba(255, 0, 0, 0.071)), 
     background-repeat: no-repeat;
     overflow: visible;
-    position: sticky;
 
     @media only screen and (max-width: $bp-large) {
         background-position: 0 20%;
