--- a/style/body/footer.scss
+++ b/style/body/footer.scss
@@ -25,6 +25,7 @@ footer {
         grid-column: 1 / 2;
         height: 13rem;
         filter: drop-shadow(2px 3px 6px rgb(63, 63, 63));
+        border-radius: 50%;
 
         @media only screen and (max-width: $bp-large) {
             grid-column: 1 / 3;
