--- a/style/body/header.scss
+++ b/style/body/header.scss
@@ -18,7 +18,7 @@ header {
     font-size: 1.8rem;
     font-family: $fira;
     // background: url('../../assets/images/stylus2.jpg') top left/auto 100% no-repeat;
-    //linear-gradient(to right, rgba(255, 255, 255, 0.179), whitesmoke),
+    // linear-gradient(to right, rgba(255, 255, 255, 0.179), whitesmoke),
     display: flex;
     align-items: center;
     padding: 0 5rem;
@@ -28,10 +28,12 @@ header {
 
     @media only screen and (max-width: $bp-mid) {
         flex-direction: column;
-        padding: 0%;
+        padding: 3rem;
+        padding-top: 10rem;
         justify-content: center;
+        width: 100%;
         // background: url('../../assets/images/stylus2.jpg') top left/auto 100% no-repeat;
-        //linear-gradient(to right, rgba(255, 255, 255, 0.8), whitesmoke),
+        // linear-gradient(to right, rgba(255, 255, 255, 0.8), whitesmoke),
     }
 
     @media only screen and (max-width: $bp-small) {
@@ -65,6 +67,12 @@ header {
         position: absolute;
         left: 5rem;
         top: -170px;
+
+        @media only screen and (max-width: $bp-mid) {
+            width: 40vw;
+            top: -10rem;
+            left: 30vw;
+        }
     }
 
     #header-links {
