--- a/style/output/index.css
+++ b/style/output/index.css
@@ -30,6 +30,11 @@ body {
     grid-template-columns: [sidebar-start] 0 [sidebar-end display-start] 100% [display-end];
   }
 }
+@media only screen and (max-width: 45em) {
+  body {
+    grid-template-rows: [headerimage-start] 15vh [headerimage-end header-start] max-content [header-end hamburger-start] max-content [hamburger-end menu-start] max-content [menu-end content-start] max-content [content-end];
+  }
+}
 
 #header-image {
   grid-column: sidebar-start/display-end;
@@ -57,8 +62,10 @@ header {
 @media only screen and (max-width: 45em) {
   header {
     flex-direction: column;
-    padding: 0%;
+    padding: 3rem;
+    padding-top: 10rem;
     justify-content: center;
+    width: 100%;
   }
 }
 @media only screen and (max-width: 22em) {
@@ -92,6 +99,13 @@ header #header-avatar {
   position: absolute;
   left: 5rem;
   top: -170px;
+}
+@media only screen and (max-width: 45em) {
+  header #header-avatar {
+    width: 40vw;
+    top: -10rem;
+    left: 30vw;
+  }
 }
 header #header-links {
   display: grid;
