--- a/style/body/header.scss
+++ b/style/body/header.scss
@@ -29,7 +29,7 @@ header {
     @media only screen and (max-width: $bp-mid) {
         flex-direction: column;
         padding: 3rem;
-        padding-top: 10rem;
+        padding-top: 25vw;
         justify-content: center;
         width: 100%;
         // background: url('../../assets/images/stylus2.jpg') top left/auto 100% no-repeat;
@@ -61,12 +61,13 @@ header {
     }
 
     #header-avatar {
-        width: 200px;
+        width: 250px;
         height: auto;
-        border-radius: 200px;
+        border-radius: 250px;
         position: absolute;
-        left: 5rem;
-        top: -170px;
+        left: 10rem;
+        top: -210px;
+        filter: drop-shadow(2px 3px 6px rgb(63, 63, 63));
 
         @media only screen and (max-width: $bp-mid) {
             width: 40vw;
