--- a/style/body/grid.scss
+++ b/style/body/grid.scss
@@ -6,7 +6,7 @@ body {
     grid-template-columns: [sidebar-start] 20vw [sidebar-end display-start] 80vw [display-end];
 
     @media only screen and (max-width: $bp-large) {
-        grid-template-rows: [headerimage-start] 15vh [headerimage-end header-start] minmax(12rem, 15vh) [header-end hamburger-start] max-content [hamburger-end menu-start] max-content [menu-end content-start] max-content [content-end];
+        grid-template-rows: [headerimage-start] 15vh [headerimage-end header-start] max-content [header-end hamburger-start] max-content [hamburger-end menu-start] max-content [menu-end content-start] max-content [content-end];
         grid-template-columns: [sidebar-start] 0 [sidebar-end display-start] 100% [display-end];
     }
 
