--- a/style/body/menu.scss
+++ b/style/body/menu.scss
@@ -19,7 +19,8 @@
         font-weight: bold;
         text-transform: uppercase;
         padding: 3rem;
-        background-color: $gray1;
+        background-color: $dark2;
+        color: white;
         transition: background-color 0.1s;
 
         i {
