--- a/style/common/colors.scss
+++ b/style/common/colors.scss
@@ -1,6 +1,9 @@
+$gray-transparent1: rgba(255, 255, 255, 0.892);
+$dark-transparent1: rgba(47, 47, 47, 0.935);
 $gray1: rgba(246, 246, 246, 0.562);
 $gray2: rgba(221, 221, 221, 0.562);
 $dark1: rgba(180, 180, 180, 0.562);
+$dark2: rgb(47, 47, 47);
 // socials
 $color-instagram: #e95950;
 $color-youtube: #d14b4b;
