--- a/style/body/display.scss
+++ b/style/body/display.scss
@@ -3,12 +3,12 @@
 
 #display {
     padding: 4rem 5rem;
-    background: linear-gradient(to bottom right, rgb(255 255 255 / 90%), rgb(255 255 255 / 94%)), url(../../assets/images/saugatowersBW.png);
+    background: url(../../assets/images/saugatowersBW.png);
     background-size: 100vw auto;
     background-position: 0 0;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-color: white;
+    background-color: $dark2;
 
     @media only screen and (max-width: $bp-large) {
         grid-row: content-start / content-end;
@@ -26,6 +26,9 @@
         margin-bottom: 2rem;
         font-family: $manrope;
         font-weight: bold;
+        color: white;
+        padding: 1rem 2rem;
+        background-color: $dark-transparent1;
     }
 
     h2.album-title {
@@ -40,8 +43,9 @@
     .metadata {
         margin-top: 2rem;
         margin-bottom: 2rem;
-        padding-top: 2rem;
-        border-top: solid 1px $dark1;
+        padding: 2rem;
+        color: white;
+        background-color: $dark-transparent1;
         display: grid;
         grid-template-columns: [heading-start]20%[heading-end body-start]80%[body-end];
         grid-row-gap: 1rem;
