--- a/style/body/header.scss
+++ b/style/body/header.scss
@@ -25,7 +25,7 @@ header {
     align-items: center;
     padding: 0 5rem;
     justify-content: space-between;
-    box-shadow: $dropshadow1;
+    // box-shadow: $dropshadow1;
     position: relative;
 
     @media only screen and (max-width: $bp-large) {
@@ -103,7 +103,7 @@ header {
         a:active {
             text-decoration: none;
             font-family: $manrope;
-            color: black
+            color: white
         }
 
         a:hover {
@@ -148,7 +148,7 @@ header {
         }
 
         a.fa-apple {
-            color: black;
+            color: white;
         }
 
         a.fa-spotify {
