Ad Dauntless other links

--- a/style/body/display.scss
+++ b/style/body/display.scss
@@ -126,6 +126,10 @@
             background-color: $color-napster;
         }
 
+        a.pandora {
+            background-color: $color-pandora;
+        }
+
         a.fa-hypeddit {
             background-color: $color-napster;
             background-image: url(../../assets/icons/hypeddit.jpeg);
