--- a/style/common/colors.scss
+++ b/style/common/colors.scss
@@ -10,5 +10,5 @@ $color-youtube: #d14b4b;
 $color-spotify: #1DB954;
 $color-soundcloud: orange;
 $color-napster: #0054a8;
-
+$color-pandora: #2196f3;
 $color-highlight: #a93838;
