--- a/style/common/colors.scss
+++ b/style/common/colors.scss
@@ -12,3 +12,5 @@ $color-soundcloud: orange;
 $color-napster: #0054a8;
 $color-pandora: #2196f3;
 $color-highlight: #a93838;
+$color-deezer: #ad47ff;
+$color-apple-background: #f5f5f7;
