--- a/style/body/display.scss
+++ b/style/body/display.scss
@@ -2,7 +2,7 @@
 @import "../common/fonts.scss";
 
 #display {
-    padding: 4rem 5rem;
+    padding: 2rem;
     background: url(../../assets/images/saugatowersBW.png);
     background-size: 100vw auto;
     background-position: 0 0;
@@ -31,8 +31,8 @@
         font-family: $manrope;
         font-weight: bold;
         color: white;
-        padding: 1rem 2rem;
-        background-color: $dark-transparent1;
+        padding: 2rem;
+        background-color: $dark2;
     }
 
     h2.album-title {
