--- a/style/body/footer.scss
+++ b/style/body/footer.scss
@@ -75,8 +75,7 @@ footer {
     }
 
     #social {
-        display: grid;
-        grid-template-columns: repeat(6, min-content);
+        display: flex;
 
         @media only screen and (max-width: $bp-large) {
             display: flex;
@@ -91,8 +90,8 @@ footer {
             justify-content: center;
             text-decoration: none;
             text-transform: uppercase;
-            padding: 10px;
-            height: 100%;
+            height: 60px;
+            width: 60px;
             color: white;
             transition: background-color 0.1s;
             font-size: 3.5rem;
@@ -103,12 +102,8 @@ footer {
             }
         }
 
-        a:before {
-            padding: 5px 7px;
-        }
-
         a:hover {
-            background-color: $gray2;
+            background-color: $gray3;
         }
 
         a.fa-instagram {
