--- a/style/body/header.scss
+++ b/style/body/header.scss
@@ -4,7 +4,6 @@
 #header-image {
     grid-column: sidebar-start / display-end;
     background: url(../../assets/images/saugatowersNew.jpg);
-    //linear-gradient(to bottom right, rgba(242, 255, 0, 0.077), rgba(255, 0, 0, 0.071)), 
     background-repeat: no-repeat;
     background-size: 100% auto;
     overflow: visible;
@@ -19,13 +18,10 @@ header {
     grid-column: sidebar-start / display-end;
     font-size: 1.8rem;
     font-family: $fira;
-    // background: url('../../assets/images/stylus2.jpg') top left/auto 100% no-repeat;
-    // linear-gradient(to right, rgba(255, 255, 255, 0.179), whitesmoke),
     display: flex;
     align-items: center;
     padding: 0 5rem;
     justify-content: space-between;
-    // box-shadow: $dropshadow1;
     position: relative;
 
     @media only screen and (max-width: $bp-large) {
@@ -111,8 +107,7 @@ header {
     }
 
     #social {
-        display: grid;
-        grid-template-columns: repeat(6, min-content);
+        display: flex;
 
         a {
             display: flex;
@@ -120,8 +115,8 @@ header {
             justify-content: center;
             text-decoration: none;
             text-transform: uppercase;
-            padding: 7px;
-            height: 100%;
+            height: 60px;
+            width: 60px;
             color: black;
             transition: background-color 0.1s;
 
@@ -130,12 +125,8 @@ header {
             }
         }
 
-        a:before {
-            padding: 5px 7px;
-        }
-
         a:hover {
-            background-color: $gray2;
+            background-color: $gray3;
         }
 
         a.fa-instagram {
