--- a/style/common/colors.scss
+++ b/style/common/colors.scss
@@ -1,16 +1,21 @@
-$gray-transparent1: rgba(255, 255, 255, 0.892);
 $dark-transparent1: rgba(47, 47, 47, 0.935);
-$gray1: rgba(246, 246, 246, 0.562);
-$gray2: rgba(221, 221, 221, 0.562);
 $dark1: rgba(180, 180, 180, 0.562);
 $dark2: rgb(47, 47, 47);
-// socials
-$color-instagram: #e95950;
+
+$gray-transparent1: rgba(255, 255, 255, 0.892);
+$gray1: rgba(246, 246, 246, 0.562);
+$gray2: rgba(221, 221, 221, 0.562);
+$gray3: rgb(255 255 255 / 88%);
+$gray4: rgb(221 221 221 / 12%);
+$gray5: rgb(221 221 221 / 27%);
+
+$color-highlight: #c84242;
+
+$color-instagram: #e82c8a;
 $color-youtube: #d14b4b;
 $color-spotify: #1DB954;
 $color-soundcloud: orange;
 $color-napster: #0054a8;
 $color-pandora: #2196f3;
-$color-highlight: #a93838;
 $color-deezer: #ad47ff;
 $color-apple-background: #f5f5f7;
