Add new background and make albums on landing page

--- a/style/body/display.scss
+++ b/style/body/display.scss
@@ -3,7 +3,7 @@
 
 #display {
     padding: 2rem;
-    background: url(../../assets/images/saugatowersBW.png);
+    background: url(../../assets/images/mic_black_background.jpg);
     background-size: 100vw auto;
     background-position: 0 0;
     background-repeat: no-repeat;
