--- a/style/common/colors.scss
+++ b/style/common/colors.scss
@@ -19,3 +19,4 @@ $color-napster: #0054a8;
 $color-pandora: #2196f3;
 $color-deezer: #ad47ff;
 $color-apple-background: #f5f5f7;
+$color-yandex: #f8604a;
